force-app/main/default/objects/Account/fields/test123__c.field-meta.xml
<CustomField>
    <fullName>test123__c</fullName>
    <label>test123</label>
    <length>40</length>
    <type>Text</type>
</CustomField>