force-app/main/default/objects/Account/fields/testte__c.field-meta.xml
<CustomField>
    <fullName>testte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test</label>
    <type>Checkbox</type>
</CustomField>