force-app/main/default/objects/Account/fields/testtest__c.field-meta.xml
<CustomField>
    <fullName>testtest__c</fullName>
    <label>test</label>
    <type>TextArea</type>
</CustomField>